style: apply spotless and openrewrite