@@ -38,9 +38,7 @@ class MigrationExecutorTest {
 
     @Test
     void execute_appliesSingleMigration() {
-        registry.register(Migration.of(2, "Add field", ctx -> {
-            ctx.data().put("newField", "value");
-        }));
+        registry.register(Migration.of(2, "Add field", ctx -> ctx.data().put("newField", "value")));
 
         MigrationResult result = executor.execute(data, 1, 2);
 
@@ -54,15 +52,9 @@ class MigrationExecutorTest {
 
     @Test
     void execute_appliesMultipleMigrations() {
-        registry.register(Migration.of(2, "Add field1", ctx -> {
-            ctx.data().put("field1", "v1");
-        }));
-        registry.register(Migration.of(3, "Add field2", ctx -> {
-            ctx.data().put("field2", "v2");
-        }));
-        registry.register(Migration.of(4, "Add field3", ctx -> {
-            ctx.data().put("field3", "v3");
-        }));
+        registry.register(Migration.of(2, "Add field1", ctx -> ctx.data().put("field1", "v1")));
+        registry.register(Migration.of(3, "Add field2", ctx -> ctx.data().put("field2", "v2")));
+        registry.register(Migration.of(4, "Add field3", ctx -> ctx.data().put("field3", "v3")));
 
         MigrationResult result = executor.execute(data, 1, 4);
 
@@ -78,9 +70,9 @@ class MigrationExecutorTest {
     void execute_migrationsInCorrectOrder() {
         List<Integer> order = new ArrayList<>();
 
-        registry.register(Migration.of(2, "M2", ctx -> order.add(2)));
-        registry.register(Migration.of(3, "M3", ctx -> order.add(3)));
-        registry.register(Migration.of(4, "M4", ctx -> order.add(4)));
+        registry.register(Migration.of(2, "M2", _ -> order.add(2)));
+        registry.register(Migration.of(3, "M3", _ -> order.add(3)));
+        registry.register(Migration.of(4, "M4", _ -> order.add(4)));
 
         executor.execute(data, 1, 4);
 
@@ -89,8 +81,8 @@ class MigrationExecutorTest {
 
     @Test
     void execute_missingMigration_strictMode_fails() {
-        registry.register(Migration.of(2, "M2", ctx -> {}));
-        registry.register(Migration.of(4, "M4", ctx -> {}));
+        registry.register(Migration.of(2, "M2", _ -> {}));
+        registry.register(Migration.of(4, "M4", _ -> {}));
         // Missing version 3
 
         MigrationResult result = executor.execute(data, 1, 4);
@@ -116,7 +108,7 @@ class MigrationExecutorTest {
 
     @Test
     void execute_migrationThrowsException_fails() {
-        registry.register(Migration.of(2, "Failing migration", ctx -> {
+        registry.register(Migration.of(2, "Failing migration", _ -> {
             throw new MigrationException("Test failure");
         }));
 
@@ -129,7 +121,7 @@ class MigrationExecutorTest {
 
     @Test
     void execute_migrationThrowsRuntimeException_wrapsIt() {
-        registry.register(Migration.of(2, "Failing migration", ctx -> {
+        registry.register(Migration.of(2, "Failing migration", _ -> {
             throw new RuntimeException("Unexpected error");
         }));
 
@@ -143,7 +135,7 @@ class MigrationExecutorTest {
     @Test
     void execute_partialFailure_recordsCompletedSteps() {
         registry.register(Migration.of(2, "M2", ctx -> ctx.data().put("m2", true)));
-        registry.register(Migration.of(3, "M3", ctx -> {
+        registry.register(Migration.of(3, "M3", _ -> {
             throw new MigrationException("Failed");
         }));
 
@@ -151,7 +143,7 @@ class MigrationExecutorTest {
 
         assertFalse(result.isSuccess());
         assertEquals(1, result.steps().size());
-        assertEquals(2, result.steps().get(0).toVersion());
+        assertEquals(2, result.steps().getFirst().toVersion());
     }
 
     @Test
@@ -165,9 +157,7 @@ class MigrationExecutorTest {
 
     @Test
     void execute_dryRun_doesNotModifyData() {
-        registry.register(Migration.of(2, "Add field", ctx -> {
-            ctx.data().put("newField", "value");
-        }));
+        registry.register(Migration.of(2, "Add field", ctx -> ctx.data().put("newField", "value")));
 
         Map<String, Object> originalData = new LinkedHashMap<>(data);
         executor.dryRun(true);
@@ -182,8 +172,8 @@ class MigrationExecutorTest {
     @Test
     void execute_beforeMigrationCallback_invoked() {
         List<String> callbacks = new ArrayList<>();
-        registry.register(Migration.of(2, "M2", ctx -> {}));
-        registry.register(Migration.of(3, "M3", ctx -> {}));
+        registry.register(Migration.of(2, "M2", _ -> {}));
+        registry.register(Migration.of(3, "M3", _ -> {}));
 
         executor.beforeMigration(m -> callbacks.add("before-" + m.targetVersion()));
         executor.execute(data, 1, 3);
@@ -194,10 +184,10 @@ class MigrationExecutorTest {
     @Test
     void execute_afterMigrationCallback_invoked() {
         List<String> callbacks = new ArrayList<>();
-        registry.register(Migration.of(2, "M2", ctx -> {}));
-        registry.register(Migration.of(3, "M3", ctx -> {}));
+        registry.register(Migration.of(2, "M2", _ -> {}));
+        registry.register(Migration.of(3, "M3", _ -> {}));
 
-        executor.afterMigration((m, ctx) -> callbacks.add("after-" + m.targetVersion()));
+        executor.afterMigration((m, _) -> callbacks.add("after-" + m.targetVersion()));
         executor.execute(data, 1, 3);
 
         assertEquals(List.of("after-2", "after-3"), callbacks);
@@ -206,7 +196,7 @@ class MigrationExecutorTest {
     @Test
     void execute_errorCallback_invokedOnFailure() {
         List<MigrationException> errors = new ArrayList<>();
-        registry.register(Migration.of(2, "Failing", ctx -> {
+        registry.register(Migration.of(2, "Failing", _ -> {
             throw new MigrationException("Test error");
         }));
 
@@ -214,7 +204,7 @@ class MigrationExecutorTest {
         executor.execute(data, 1, 2);
 
         assertEquals(1, errors.size());
-        assertTrue(errors.get(0).getMessage().contains("Test error"));
+        assertTrue(errors.getFirst().getMessage().contains("Test error"));
     }
 
     @Test
@@ -222,28 +212,26 @@ class MigrationExecutorTest {
         Path testPath = Path.of("test/config.yml");
         List<Path> capturedPaths = new ArrayList<>();
 
-        registry.register(Migration.of(2, "M2", ctx -> {
-            capturedPaths.add(ctx.filePath());
-        }));
+        registry.register(Migration.of(2, "M2", ctx -> capturedPaths.add(ctx.filePath())));
 
         executor.execute(testPath, data, 1, 2);
 
         assertEquals(1, capturedPaths.size());
-        assertEquals(testPath, capturedPaths.get(0));
+        assertEquals(testPath, capturedPaths.getFirst());
     }
 
     @Test
     void canMigrate_complete_returnsTrue() {
-        registry.register(Migration.of(2, "M2", ctx -> {}));
-        registry.register(Migration.of(3, "M3", ctx -> {}));
+        registry.register(Migration.of(2, "M2", _ -> {}));
+        registry.register(Migration.of(3, "M3", _ -> {}));
 
         assertTrue(executor.canMigrate(1, 3));
     }
 
     @Test
     void canMigrate_incomplete_returnsFalse() {
-        registry.register(Migration.of(2, "M2", ctx -> {}));
-        registry.register(Migration.of(4, "M4", ctx -> {}));
+        registry.register(Migration.of(2, "M2", _ -> {}));
+        registry.register(Migration.of(4, "M4", _ -> {}));
 
         assertFalse(executor.canMigrate(1, 4));
     }
@@ -255,10 +243,10 @@ class MigrationExecutorTest {
 
     @Test
     void execute_stepDurationTracked() {
-        registry.register(Migration.of(2, "M2", ctx -> {
+        registry.register(Migration.of(2, "M2", _ -> {
             try {
                 Thread.sleep(10);
-            } catch (InterruptedException e) {
+            } catch (InterruptedException _) {
                 Thread.currentThread().interrupt();
             }
         }));
@@ -267,12 +255,12 @@ class MigrationExecutorTest {
 
         assertTrue(result.isSuccess());
         assertFalse(result.steps().isEmpty());
-        assertTrue(result.steps().get(0).duration().toMillis() >= 10);
+        assertTrue(result.steps().getFirst().duration().toMillis() >= 10);
     }
 
     @Test
     void execute_totalDurationTracked() {
-        registry.register(Migration.of(2, "M2", ctx -> {}));
+        registry.register(Migration.of(2, "M2", _ -> {}));
 
         MigrationResult result = executor.execute(data, 1, 2);
 
